修复性能问题
